mypkg/log/build_2024-11-21_11-24-22/mypkg/stderr.log
  File "/home/matsu/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 9
    def cd(msg)
              ^
SyntaxError: invalid syntax

